.metadata/.plugins/org.eclipse.cdt.ui/lab2_proj.build.log
21:15:02 **** Incremental Build of configuration Debug for project lab2_proj ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DARM_MATH_CM4 -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I"C:/Users/johns/Documents/EngineeringRepositories/ENCM515/lab2_proj/Drivers/stm32f411e/Inc" -I"C:/Users/johns/Documents/EngineeringRepositories/ENCM515/lab2_proj/Drivers/CMSIS/DSP/Include" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../PDM2PCM/App -I../Middlewares/ST/STM32_Audio/Addons/PDM/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:56:31: warning: initialization of 'volatile int32_t *' {aka 'volatile long int *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
   56 | volatile int32_t *raw_audio = 0x802002C; // ignore first 44 bytes of header
      |                               ^~~~~~~~~
../Core/Src/main.c:35:33: warning: initialization of 'float32_t *' {aka 'float *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
   35 | #define DATA_START_ADDRESS      0x08020000
      |                                 ^~~~~~~~~~
../Core/Src/main.c:63:19: note: in expansion of macro 'DATA_START_ADDRESS'
   63 | float32_t* data = DATA_START_ADDRESS;
      |                   ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:167:14: warning: unused variable 'start' [-Wunused-variable]
  167 |   static int start = 0;
      |              ^~~~~
../Core/Src/main.c: In function 'FloatFilterGet':
../Core/Src/main.c:416:32: error: 'filter_taps' undeclared (first use in this function); did you mean 'filter_coeffs'?
  416 |                 accumulator += filter_taps[i] * history[i];
      |                                ^~~~~~~~~~~
      |                                filter_coeffs
../Core/Src/main.c:416:32: note: each undeclared identifier is reported only once for each function it appears in
At top level:
../Core/Src/main.c:167:14: warning: 'start' defined but not used [-Wunused-variable]
  167 |   static int start = 0;
      |              ^~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

21:15:02 Build Failed. 2 errors, 4 warnings. (took 693ms)

